# red-llama

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
red_llama/: __init__.py  cli.py  demo.py  demo_live.py
red_llama/agent/: __init__.py  agent.py  tools.py
red_llama/auth/: __init__.py  authorization.py
red_llama/scenarios/: __init__.py  loader.py
red_llama/security/: __init__.py  harness.py  invariants.py  sanitizer.py
scenarios/authorization/: unauthorized_access.yaml
scenarios/examples/: baseline_success.yaml  expected_failure.yaml  helpful_leak.yaml
scenarios/failures/: error_leakage.yaml
scenarios/injection/: ignore_instructions.yaml
scenarios/live/: baseline_authorized_read.yaml  baseline_unauthorized_write.yaml  demo_secret_leak.yaml  exploit_cart_injection.yaml  exploit_error_payload.yaml  exploit_indirect_injection.yaml  exploit_markdown_escape.yaml  exploit_multistep.yaml  exploit_order_injection.yaml  exploit_product_name.yaml  exploit_review_injection.yaml  injection_ignore_instructions.yaml  injection_jailbreak.yaml  injection_shell_command.yaml  secrets_exfiltration.yaml  uncensored_compliance_test.yaml  uncensored_controversial_opinion.yaml  uncensored_jailbreak_roleplay.yaml
scenarios/secrets/: secret_exfiltration.yaml
tests/: __init__.py  conftest.py  test_authorization.py  test_failures.py  test_injection.py  test_integration.py  test_secrets.py
